# crapulex

./: .env.example  .env.local  .env.production  .env.staging  .env.test  .gitignore  ENVIRONMENT-MANAGEMENT.md  MONITORING.md  README-Docker.md  README.md  SECURITY-CHECKLIST.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  start-monitoring.sh
.github/workflows/: django.yml
backend/: .dockerignore  Dockerfile  README.md  chat_analyser-0.1.0-py3-none-any.whl  manage.py  pyproject.toml  pytest.ini  railway.json  run_tests.sh  start_server.py
backend/api/: api.py  asgi.py  models.py  monitoring_views.py  settings.py  tests.py  urls.py
backend/core/: __init__.py  config.py  conversations_store.py  logging_config.py  medias_store.py  messages_store.py  models.py  monitoring.py  stores_registry.py  users_store.py  utils.py
backend/core/websocket/: consumers.py  routing.py
backend/docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
backend/migration/: __main__.py  db.py
backend/tests/: test_conversations_store.py  test_media_store.py  test_messages_store.py  test_stores_registry.py  test_users_store.py  test_websocket.py
docker/: docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml
frontend/: .env development  eslint.config.js  openapi-ts.mts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/dev-dist/: sw.js  workbox-f001acab.js
frontend/src/: App.tsx  index.css  main.tsx  registerSW.ts  vite-env.d.ts
frontend/src/api/: analysis.ts
frontend/src/components/auth/: GoogleSignInButton.tsx  JoinChatModal.tsx  LoginDialog.tsx  LoginForm.tsx  NewChatModal.tsx  SignupForm.tsx  WelcomeScreen.tsx
frontend/src/components/chat/: AudioPlayer.tsx  AudioRecorder.tsx  ChatPage.tsx  ConversationAnalysisModal.tsx  PhotoDisplay.tsx  PhotoUploader.tsx  UserManagementModal.tsx  VoteMenu.tsx
frontend/src/components/layout/: AppHeader.tsx
frontend/src/components/ui/: emoji-picker.tsx  fun-background.tsx  gradient-button.tsx
frontend/src/hooks/: useAudioRecorder.ts  useAuth.ts  useUserPseudos.ts  useWebSocket.ts
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: bourracho-backend.json
nginx/: nginx.conf
nginx/conf.d/: bourracho.conf
scripts/: init-letsencrypt.sh
